--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -1,175 +1,56 @@
-<!DOCTYPE html>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-<meta charset="UTF-8">
-<script type="text/javascript" src="js/calculateStock.js"></script>
-<head>
-</head>
-<body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Pub-O | </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#" style="margin-left: 10px;">
             <img src="img/Nelsons_HiRes_Circle_Only-1.png" width="38" height="30" class="d-inline-block align-top"
                 alt="">
-            Stock calculation helper</a>
+            Pub-O
+        </a>
+        <a class="navbar-text me-auto" href="#">
+            V0.1
+        </a>
     </nav>
-    <div class="card" style="margin: 0.5%;">
-        <div class="container-fluid" style="margin-top: 25px;">
-            <div class="row" style="margin-bottom: 10px;">
-                <div class="col">
-                    <h5 class="text-center">Kassenstand</h5>
+    <div class="container text-center" style="margin-top: 2%;">
+        <div class="row">
+          <div class="col">
+            <div class="card">
+                <img src="img/stock-helper-card.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Stock helper</h5>
+                  <p class="card-text"></p>
+                  <a href="stockmgnt/index.html" class="btn btn-primary">Open</a>
                 </div>
-                <div class="col">
-                    <h5 class="text-center">Zählerstand</h5>
+              </div>
+          </div>
+          <div class="col">
+            <div class="card">
+                <img src="img/shifts-card.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Shifts</h5>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-secondary disabled">Open</a>
                 </div>
-                <div class="col"></div>
-                <div class="col"></div>
-            </div>
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputWineKassa" onchange="calculateStock()" placeholder="Wine">
+              </div>
+          </div>
+          <div class="col">
+            <div class="card">
+                <img src="img/shopping-card.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Shopping</h5>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-secondary disabled">Open</a>
                 </div>
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputWineZahler" onchange="calculateStock()" placeholder="Wine">
-                </div>
-                <div class="col">
-                    <img src="img/pitcher.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="wineP"></span>
-                </div>
-                <div class="col">
-                    <img src="img/glas.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="wineG"></span>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputGosserKassa" onchange="calculateStock()" placeholder="Gösser">
-                </div>
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputGosserZahler" onchange="calculateStock()" placeholder="Gösser">
-                </div>
-                <div class="col">
-                    <img src="img/pitcher.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="gosP"></span>
-                </div>
-                <div class="col">
-                    <img src="img/glas.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="gosG"></span>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputCiderKassa" onchange="calculateStock()" placeholder="Cider">
-                </div>
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputCiderZahler" onchange="calculateStock()" placeholder="Cider">
-                </div>
-                <div class="col">
-                    <img src="img/pitcher.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="cidP"></span>
-                </div>
-                <div class="col">
-                    <img src="img/glas.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="cidG"></span>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputStieglKassa" onchange="calculateStock()" placeholder="Stiegl">
-                </div>
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputStieglZahler" onchange="calculateStock()" placeholder="Stiegl">
-                </div>
-                <div class="col">
-                    <img src="img/pitcher.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="stieP"></span>
-                </div>
-                <div class="col">
-                    <img src="img/glas.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="stieG"></span>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputThalheimKassa" onchange="calculateStock()" placeholder="Thalheim">
-                </div>
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputThalheimZahler" onchange="calculateStock()" placeholder="Thalheim">
-                </div>
-                <div class="col">
-                    <img src="img/pitcher.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="thalP"></span>
-                </div>
-                <div class="col">
-                    <img src="img/glas.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="thalG"></span>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputStaroKassa" onchange="calculateStock()" placeholder="Staro">
-                </div>
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputStaroZahler" onchange="calculateStock()" placeholder="Staro">
-                </div>
-                <div class="col">
-                    <img src="img/pitcher.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="starP"></span>
-                </div>
-                <div class="col">
-                    <img src="img/glas.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="starG"></span>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputKilkennyKassa" onchange="calculateStock()" placeholder="Kilkenny">
-                </div>
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputKilkennyZahler" onchange="calculateStock()" placeholder="Kilkenny">
-                </div>
-                <div class="col">
-                    <img src="img/pitcher.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="kilP"></span>
-                </div>
-                <div class="col">
-                    <img src="img/glas.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="kilG"></span>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputHopHouseKassa" onchange="calculateStock()" placeholder="HopHouse">
-                </div>
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputHopHouseZahler" onchange="calculateStock()" placeholder="HopHouse">
-                </div>
-                <div class="col">
-                    <img src="img/pitcher.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="hopP"></span>
-                </div>
-                <div class="col">
-                    <img src="img/glas.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="hopG"></span>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputGuinnessKassa" onchange="calculateStock()" placeholder="Guinness">
-                </div>
-                <div class="col">
-                    <input type="tel" class="form-control" id="InputGuinnessZahler" onchange="calculateStock()" placeholder="Guinness">
-                </div>
-                <div class="col">
-                    <img src="img/glas.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    <span class="lead" id="guinG"></span>
-                </div>
-                <div class="col"></div>
-            </div>
+              </div>
+          </div>
         </div>
-    </div>
-</body>
-
+      </div>
+  </body>
 </html>
