--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -32,7 +32,7 @@
           </div>
           <div class="col">
             <div class="card">
-                <img src="img/shifts-card.jpeg" class="card-img-top" alt="...">
+                <img src="#" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Shifts</h5>
                   <p class="card-text"></p>
