--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -18,7 +18,7 @@
             V0.1
         </a>
     </nav>
-    <div class="container text-center" style="margin-top: 2%;">
+    <div class="container text-center mt-2 w-auto">
         <div class="row">
           <div class="col">
             <div class="card">
@@ -36,7 +36,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Shifts</h5>
                   <p class="card-text"></p>
-                  <a href="#" class="btn btn-secondary disabled">Open</a>
+                  <a href="shifts/index.html" class="btn btn-primary">Open</a>
                 </div>
               </div>
           </div>
