--- a/nginx/html/shifts/index.html
+++ b/nginx/html/shifts/index.html
@@ -23,7 +23,7 @@
     <nav aria-label="breadcrumb" style="margin: 2%;">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Stock-Helper</li>
+            <li class="breadcrumb-item active" aria-current="page">Shifts</li>
         </ol>
     </nav>
     <div class="container-fluid text-center mt-2 w-auto">
