feat: add responsive navbars with toggler

--- a/nginx/html/shifts/index.html
+++ b/nginx/html/shifts/index.html
@@ -11,14 +11,22 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="../index.html" style="margin-left: 10px;">
-            <img src="../img/Nelsons_HiRes_Circle_Only-1.png" width="38" height="30" class="d-inline-block align-top"
-                alt="">
-            Pub-O</a>
-        <a class="navbar-text me-auto" href="#">
-            V0.1
-        </a>
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html" style="margin-left: 10px;">
+                <img src="../img/Nelsons_HiRes_Circle_Only-1.png" width="38" height="30" class="d-inline-block align-top"
+                    alt="">
+                Pub-O</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <a class="navbar-text me-auto" href="#">
+                    V0.1
+                </a>
+            </div>
+        </div>
     </nav>
     <nav aria-label="breadcrumb" style="margin: 2%;">
         <ol class="breadcrumb">
