--- a/nginx/html/stockmgnt/index.html
+++ b/nginx/html/stockmgnt/index.html
@@ -12,13 +12,21 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-        <a class="navbar-brand ms-2" href="../index.html">
-            <img src="../img/Nelsons_HiRes_Circle_Only-1.png" width="38" height="30" class="d-inline-block align-top"
-                alt="">
-            Pub-O</a>
-        <a class="navbar-text me-auto" href="#">
-            V0.1
-        </a>
+        <div class="container-fluid">
+            <a class="navbar-brand ms-2" href="../index.html">
+                <img src="../img/Nelsons_HiRes_Circle_Only-1.png" width="38" height="30" class="d-inline-block align-top"
+                    alt="">
+                Pub-O</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <a class="navbar-text me-auto" href="#">
+                    V0.1
+                </a>
+            </div>
+        </div>
     </nav>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb mx-3 my-3">
