--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -19,8 +19,8 @@
         </a>
     </nav>
     <div class="container text-center mt-2 w-auto">
-        <div class="row">
-          <div class="col">
+        <div class="row row-cols-1 row-cols-md-3 g-3">
+          <div class="col-12 col-md-4 mb-3">
             <div class="card">
                 <img src="img/stock-helper-card.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -30,7 +30,7 @@
                 </div>
               </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-md-4 mb-3">
             <div class="card">
                 <img src="#" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -40,7 +40,7 @@
                 </div>
               </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-md-4 mb-3">
             <div class="card">
                 <img src="img/shopping-card.png" class="card-img-top" alt="...">
                 <div class="card-body">
