Fix Guinness spelling

--- a/nginx/html/stockmgnt/index.html
+++ b/nginx/html/stockmgnt/index.html
@@ -216,7 +216,7 @@
                         placeholder="Guinness">
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-dark overflow-hidden w-100">Guinnes</button>
+                    <button class="btn btn-dark overflow-hidden w-100">Guinness</button>
                 </div>
                 <div class="col-md-auto">
                     <img src="../img/glas.png" width="30" height="30" class="d-inline-block align-top" alt="">
