Add lagerstand column to stock summary

--- a/nginx/html/stockmgnt/index.html
+++ b/nginx/html/stockmgnt/index.html
@@ -217,6 +217,11 @@
                 </div>
                 <div class="col-md-auto"></div>
             </div>
+            <div class="row my-3">
+                <div class="col text-end">
+                    <button type="button" class="btn btn-primary" onclick="showSummary()">Bestand zusammenfassen</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
