Store stock history in lagerstand table

--- a/nginx/html/stockmgnt/summary.html
+++ b/nginx/html/stockmgnt/summary.html
@@ -67,6 +67,14 @@
                 </div>
             </div>
         </div>
+        <div class="card mx-2 mt-3" id="weeklyConsumptionCard">
+            <div class="card-header">
+                <h5 class="mb-0">Verbrauch (letzte 7 Tage)</h5>
+            </div>
+            <div class="card-body" id="weeklyConsumptionBody">
+                <p class="text-muted mb-0">Es liegen noch keine gespeicherten Lagerstände vor.</p>
+            </div>
+        </div>
     </div>
 </body>
 
